// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create C Data Set Success scenarios should create a c partitioned data set 1`] = `
"================Z/OS FILES CREATE DATA-SET-C===============
Data set created successfully.
"
`;

exports[`Create C Data Set Success scenarios should create a c partitioned data set and print attributes 1`] = `
"================Z/OS FILES CREATE DATA-SET-C ===============
{
  \\"success\\": true,
  \\"exitCode\\": 0,
  \\"message\\": \\"\\",
  \\"stdout\\": \\"Data set created successfully.\\\\n\\",
  \\"stderr\\": \\"\\",
  \\"data\\": {
    \\"success\\": true,
    \\"commandResponse\\": \\"Data set created successfully.\\"
  }
}"
`;

exports[`Create C Data Set Success scenarios should create a c partitioned data set with response timeout 1`] = `
"================Z/OS FILES CREATE DATA-SET-C===============
Data set created successfully.
"
`;

exports[`Create C Data Set Success scenarios should create a c partitioned data set with specified primary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-C===============
dsorg:     PO
alcunit:   CYL
primary:   20
recfm:     VB
blksize:   32760
lrecl:     260
dirblk:    25
secondary: 1

Data set created successfully.
"
`;

exports[`Create C Data Set Success scenarios should create a c partitioned data set with specified primary and secondary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-C===============
dsorg:     PO
alcunit:   CYL
primary:   20
recfm:     VB
blksize:   32760
lrecl:     260
dirblk:    25
secondary: 5

Data set created successfully.
"
`;

exports[`Create C Data Set Success scenarios should create a c partitioned data set with specified size 1`] = `
"================Z/OS FILES CREATE DATA-SET-C===============
dsorg:     PO
alcunit:   CYL
primary:   2
recfm:     VB
blksize:   32760
lrecl:     260
dirblk:    25
secondary: 0

Data set created successfully.
"
`;

exports[`Create C Data Set without profiles should create a c partitioned data set 1`] = `
"Data set created successfully.
"
`;
